WIP building new scaleFactorRecommender system
When we moved from Spherical to mercator we discussed the variation in scalefactor
required to cover all child cells was much higher for some cells. As a result we've
implemented a mechanism to use some hard-coded scale factors for the extreme outliers